# Rainout

./: .gitignore  CMakeLists.txt  Readme.md
core/: openglRender.h  windowManager.h
demos/: characterController.cpp  game.cpp  pong.cpp
demos/SpaceShooter/: CMakeLists.txt  shooter.cpp
demos/controller/: CMakeLists.txt  controller.cpp
demos/controller/assets/: vertex.glsl
demos/pong/: CMakeLists.txt  pong.cpp
include/rainout/: assetManager.h  collider.h  engine.h  entity.h  keyboard.h  material.h  matrix.h  rainout.h  scene.h  transform.h  utils.h  vector.h  window.h
launcher/: main.cpp
res/: fragment.glsl  vertex.glsl
src/: Texture.cpp  assetManager.cpp  entity.cpp  keyboard.cpp  openglRender.cpp  scene.cpp  utils.cpp  window.cpp  windowManager.cpp
tests/: game.cpp  matrix.cpp
